--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
     <title>Top Movies</title>
 </head>
 <body>
-    
+    <div class="nav nav__home nav__row">
+        <img class="logo" src="./assets/logo.png" alt="Top Movies Logo">
+        <ul class="nav__links">
+            <li><a class="nav__link nav__link--home" href="">Home</a></li>
+            <li><a class="nav__link nav__link--home" href="">Movies</a></li>
+            <li><a class="nav__link nav__link--home contact" href="">Contact</a></li>
+        </ul>
+    </div>
 </body>
 </html>
