--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/914dfb5281.js" crossorigin="anonymous"></script>
     <title>Top Movies</title>
 </head>
 <body>
@@ -17,5 +18,24 @@
             <li><a class="nav__link nav__link--home contact" href="">Contact</a></li>
         </ul>
     </div>
+    <section id="landing">
+        <div class="row">
+            <div class="wrapper">
+                <div class="container">
+                    <h1 class="heading">
+                        Canada's most awarded movie subscription platform
+                    </h1>
+                    <h2 class="subheading">
+                        Find your favourite movie with <span class="red">Top Movies</span>
+                    </h2>
+                    <div class="browse">
+                        <input class="search-bar" type="text" placeholder="Search by movie name">
+                        <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </div>
+                </div>
+                <img class="home-img" src="./assets/girlOnSofaWithPopcorn.svg" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
