--- a/movies.html
+++ b/movies.html
@@ -5,23 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
     <title>Movies</title>
 </head>
 <body>
-    <div class="nav">
-        <div class="logo">
-            <img src="./assets/logo-white.png" alt="Blinker Logo">
-        </div>
+    <div class="nav nav__movies nav__row bg-img">
+        <img class="logo" src="./assets/logo.png" alt="Top Movies">
         <ul class="nav__links">
-            <li><a href="">Home</a></li>
-            <li><a href="">Movies</a></li>
-            <li><a href="">Contact</a></li>
+            <li class="nav__link nav__link--movies">Home</li>
+            <li class="nav__link nav__link--movies">Movies</li>
+            <li class="nav__link nav__link--movies contact contact__movies">Contact</li>
         </ul>
-    </div>
-    <div class="searchbar">
-        <div class="searchbar__title"></div>
-        <div class="search__field"></div>
     </div>
 </body>
 </html>
