--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Top Movies</title>
 </head>
 <body>
-    <div class="nav nav__home nav__row">
+    <div class="nav nav__row">
         <img class="logo" src="./assets/logo.png" alt="Top Movies Logo">
         <ul class="nav__links">
             <li><a class="nav__link nav__link--home" href="">Home</a></li>
             <li><a class="nav__link nav__link--home" href="">Movies</a></li>
-            <li><a class="nav__link nav__link--home contact" href="">Contact</a></li>
+            <li><a class="nav__link nav__link--home contact contact__home" href="">Contact</a></li>
         </ul>
     </div>
     <section id="landing">
