--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="logo" src="./assets/logo.png" alt="Top Movies Logo">
         <ul class="nav__links">
             <li><a class="nav__link nav__link--home" href="">Home</a></li>
-            <li><a class="nav__link nav__link--home" href="">Movies</a></li>
+            <li><a class="nav__link nav__link--home" href="movies.html">Movies</a></li>
             <li><a class="nav__link nav__link--home contact contact__home" href="">Contact</a></li>
         </ul>
     </div>
